app/styles/main.scss
/* ... */
/*iPhone 6*/
@media only screen 
and (min-width : 375px) 
and (max-width : 667px) { 
	.nav {
			padding-left:30px;
		}

		.nav>li {
		  position: relative;
		  display: inline-block;
		}

		.jumbotron h1 {
			font-size: 38px !important;
		}

		.title-invert{
			font-family: UrbanoExtraCond;
			font-size: 140px;
		  margin: 0 auto;
		  letter-spacing: 11px;
		  text-align:center;
		  max-width:90% !important;
			position: absolute;
			top: 150px !important;
			left: 0;
			right: 0;
			color:rgb(68, 68, 68) !important;
		}

		.subtitle-invert {
			font-family: 'ArcherProLightItalic';
			font-size: 20px;
			font-weight: 100;
			font-style: italic;
			letter-spacing: 1px;
			color:white;
			margin:0 auto;
		  position: absolute;
		  top: 290px !important;
		  left: 0;
		  right: 0;
		  text-align: center;
			color:rgb(68, 68, 68);
		}

		.main-title{
			padding-top:50px;
			font-family: UrbanoExtraCond;
			margin: 0 auto;
		  letter-spacing: 11px;
		  width: 100%;
		  text-align:center;
			color:rgb(68, 68, 68) !important;
		}	

		.title {
			font-family: UrbanoExtraCond;
			font-size: 140px;
		  margin: 0 auto;
		  color: white !important;
		  letter-spacing: 11px;
		  text-align:center;
		  max-width:80% !important;
			position: absolute;
			top: 180px !important;
			left: 0;
			right: 0;
		}

		.subtitle {
			font-family: 'ArcherProLightItalic';
			font-size: 20px;
			font-weight: 100;
			font-style: italic;
			letter-spacing: 1px;
			color:white;
			margin:0 auto;
		  position: absolute;
		  top: 280px !important;
		  left: 0;
		  right: 0;
		  text-align: center;
		}

		.badge{
			display: inline-block;
		  min-width: 10px;
		  padding: 5px 11px;
		  font-size: 10px;
		  font-weight: 100;
		  font-style: italic;
		  line-height: 1;
		  color: #fff;
		  width: 100px;
		  text-align: center;
		  white-space: nowrap;
		  vertical-align: middle;
		  background-color: #777;
		  border-radius: 10px;
		  position: absolute;
		  margin:0 auto;
		  top: 330px !important;
		  left: 0;
		  right: 0;
		  transition:.25s background;
		}

		.badge-about{
			top:220px !important;
		}

		.badge-home{
			top: 42% !important;
		}

		.about{
			font-family: 'ArcherProBook';
		    font-size: 16px;
		    font-weight: 100;
		    letter-spacing: 1px;
		    color: #444444;
		    margin: 0 auto;
		    line-height: 20px;
		    position: relative;
		    padding-top:60px !important;
		}		

		#logo{
			background: url('../../images/ap-logo.svg') no-repeat center center;
		  z-index: -2;
		  background-size: 320px !important;
		  opacity: .1;
		  position: fixed;
		  width: 100%;
		  top:0;
		  left:0;
		  right:0;
		/*  height: 350px;*/ /*same height as jumbotron */
		}

		.history{
			background: url('../../images/basic_spread_text.svg') no-repeat center center;
			z-index: -2;
			background-size: 240px !important;
			opacity: .9;
			height: 100%;
			width: 100%;
			position: absolute;
			background-position-y: 3% !important;
		}

		.future{
			background: url('../../images/basic_eye.svg') no-repeat center center;
			z-index: -2;
			background-size: 240px !important;
			opacity: .35;
			height: 100%;
			width: 100%;
			position: absolute;
			background-position-y: 2% !important;
		}

		.podium{
			background: url('../../images/basic_display.svg') no-repeat center center;
			z-index: -2;
			background-size: 150px !important;
			opacity: .45;
			height: 100%;
			width: 100%;
			position: absolute;
			background-position-y: 6% !important;
		}

		.pickle{
			background: url('../../images/basic_signs.svg') no-repeat center center;
			z-index: -2;
		  background-size: 180px !important;
		  opacity: .75;
		  height: 100%;
		  width: 100%;
		  position: absolute;
		  background-position-y: 3% !important;
		}

		.pickleUX{
			padding-left: 50px !important;
			padding-top: 20px !important;
		}

		.newco {
			background: url('../../images/basic_multiscreen.svg') no-repeat center center;
			z-index: -2;
			background-size: 280px !important;
			opacity: 1;
			height: 100%;
			width: 100%;
			position: absolute;
			background-position-y: 3% !important;
		}

		.controls-column-center {
			top: 422px !important;
			position: fixed;
			height: 100%;
			width: 100%;
			z-index: 1000000;
			left:0;
			right:0;
		}

		.next-prev svg {
			width:60px !important;
		}

		.next-prev:hover {
			opacity: 1 !important;
		}

		.next-prev:active{
			opacity: .5 !important;
		}

		.scroll-down{
			top: 0px !important;
			padding-top: 11% !important; 
		}

		.projectNum {
		  position: fixed;
		  right: 30px !important;
		  top: 35% !important;
		}

		.about-container{
			padding-top:200px;
			max-width: 90%;
			margin:0 auto;
		}

		.about-container h3{
			font-size:16px !important;
		}

		.scrollTopButtonOn {
		  	background: url('../../images/scrollTop-01.svg') no-repeat;
	    	-webkit-transition: all 1s;
	   		transition: all 1s;
	    	position: fixed;
			bottom: 20px;
			right: 20px !important;
			width: 50px !important;
			height: 50px !important;
			z-index: 9999999999999; 
		}

	.scrollTopButtonOn:active{
		opacity:.25;
		cursor: pointer;
	}

	.scrollTopButtonOn-add {
		background: url('../../images/scrollTop-01.svg') no-repeat;
		opacity:0;
		position: fixed;
	  	bottom: 20px;
		right: 20px !important;
		width: 50px !important;
		height: 50px !important;
		-webkit-transform: translate3d(0,-200,0);
		transform: translate3d(0,-200,0);
		z-index: 9999999999999;
	}

	.scrollTopButtonOn-add-active{
		background: url('../../images/scrollTop-01.svg') no-repeat;
		position: fixed;
		bottom: 20px;
		right: 20px !important;
		width: 50px !important;
		height: 50px !important;
		opacity:1;
		-webkit-transform: translate3d(0,0,0);
		transform: translate3d(0,0,0);
		z-index: 9999999999999;
	}
}
/* ... */

